--- a/view/fase-de-grupo.html
+++ b/view/fase-de-grupo.html
@@ -50,7 +50,7 @@
 
     <div class="body">
         <div class="container">
-            <h2 class="my-5 text-primary text-center">Fase de Grupos</h2>
+            <h2 class="py-5 text-primary text-center">Fase de Grupos</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="table-responsive">
