--- a/view/index.html
+++ b/view/index.html
@@ -75,12 +75,12 @@
                 </a>
                 <a href="">
                     <div class="carousel-item">
-                        <img src="../content/images/banners/banner_02.png" alt="" width="100%" height="100%">
+                        <img src="../content/images/banners/banner_01.png" alt="" width="100%" height="100%">
                     </div>
                 </a>
                 <a href="">
                     <div class="carousel-item">
-                        <img src="../content/images/banners/banner_03.png" alt="" width="100%" height="100%">
+                        <img src="../content/images/banners/banner_01.png" alt="" width="100%" height="100%">
                     </div>
                 </a>
                 <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
@@ -157,7 +157,7 @@
                                       <div class="col-md-4 text-center justify-content-center my-2">
                                           <p class="mb-0"> 
                                               <strong class="font-14 text-primary">World Cup</strong> 
-                                              <p class="font-14 mb-0">
+                                              <p class="font-12 mb-0">
                                                   21 Nov, 2022
                                                   10:00 AM GMT-3
                                               </p> 
@@ -209,7 +209,7 @@
                                       <div class="col-md-4 text-center justify-content-center my-2">
                                           <p class="mb-0"> 
                                               <strong class="font-14 text-primary">World Cup</strong> 
-                                              <p class="font-14 mb-0">
+                                              <p class="font-12 mb-0">
                                                   21 Nov, 2022
                                                   01:00 PM GMT-3
                                               </p> 
@@ -254,7 +254,7 @@
                 <div class="owl-carousel news-carousel owl-theme">
                     <div class="item">
                         <div class="card border-0">
-                            <img src="../content/images/news/news_01.jpg" alt="Imagem da noticia">
+                            <img src="../content/images/news/news_02.jpg" alt="Imagem da noticia">
                             <div class="card-body">
                                 <small class="font-12">27 Julho, 2022</small>
                                 <h5 class="font-24">Titulo</h5>
@@ -265,7 +265,7 @@
 
                     <div class="item">
                         <div class="card border-0">
-                            <img src="../content/images/news/news_02.jpg" alt="Imagem da noticia">
+                            <img src="../content/images/news/news_01.jpg" alt="Imagem da noticia">
                             <div class="card-body">
                                 <small class="font-12">27 Julho, 2022</small>
                                 <h5 class="font-24">Titulo</h5>
@@ -291,7 +291,7 @@
                             <div class="card-body">
                                 <small class="font-12">27 Julho, 2022</small>
                                 <h5 class="font-24">Titulo</h5>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam neque mollitia quae et animi voluptates molestiae qui quisquam omnis est?</p>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam neque mollitia quae et animi voluptates molestiae qui quisquam omnis est sapiente?</p>
                             </div>
                         </div>
                     </div>
@@ -331,9 +331,9 @@
                                         <span class="mx-1">1</span>
                                     </th>
                                     <td class="text-center align-middle px-0">
-                                        <img src="../content/images/countries/Catar.png" alt="">
+                                        <img src="../content/images/countries/Brasil.png" alt="">
                                     </td>
-                                    <td class="align-middle ps-0">Catar</td>
+                                    <td class="align-middle ps-0">Brasil</td>
                                     <td class="text-center align-middle">0</td>
                                     <td class="text-center align-middle">0</td>
                                     <td class="text-center align-middle">0</td>
@@ -341,7 +341,7 @@
                                 </tr>
                                 <tr>
                                     <th scope="row" class=" text-center align-middle">
-                                        <span class="mx-1">1</span>
+                                        <span class="mx-1">2</span>
                                     </th>
                                     <td class="text-center align-middle px-0">
                                         <img src="../content/images/countries/Catar.png" alt="">
@@ -354,12 +354,12 @@
                                 </tr>
                                 <tr>
                                     <th scope="row" class=" text-center align-middle">
-                                        <span class="mx-1">1</span>
+                                        <span class="mx-1">3</span>
                                     </th>
                                     <td class="text-center align-middle px-0">
-                                        <img src="../content/images/countries/Catar.png" alt="">
+                                        <img src="../content/images/countries/Alemanha.png" alt="">
                                     </td>
-                                    <td class="align-middle ps-0">Catar</td>
+                                    <td class="align-middle ps-0">Alemanha</td>
                                     <td class="text-center align-middle">0</td>
                                     <td class="text-center align-middle">0</td>
                                     <td class="text-center align-middle">0</td>
@@ -367,12 +367,12 @@
                                 </tr>
                                 <tr>
                                     <th scope="row" class=" text-center align-middle">
-                                        <span class="mx-1">1</span>
+                                        <span class="mx-1">4</span>
                                     </th>
                                     <td class="text-center align-middle px-0">
-                                        <img src="../content/images/countries/Catar.png" alt="">
+                                        <img src="../content/images/countries/Argentina.png" alt="">
                                     </td>
-                                    <td class="align-middle ps-0">Catar</td>
+                                    <td class="align-middle ps-0">Argentina</td>
                                     <td class="text-center align-middle">0</td>
                                     <td class="text-center align-middle">0</td>
                                     <td class="text-center align-middle">0</td>
@@ -380,12 +380,12 @@
                                 </tr>
                                 <tr>
                                     <th scope="row" class=" text-center align-middle">
-                                        <span class="mx-1">1</span>
+                                        <span class="mx-1">5</span>
                                     </th>
                                     <td class="text-center align-middle px-0">
-                                        <img src="../content/images/countries/Catar.png" alt="">
+                                        <img src="../content/images/countries/Holanda.png" alt="">
                                     </td>
-                                    <td class="align-middle ps-0">Catar</td>
+                                    <td class="align-middle ps-0">Holanda</td>
                                     <td class="text-center align-middle">0</td>
                                     <td class="text-center align-middle">0</td>
                                     <td class="text-center align-middle">0</td>
@@ -408,16 +408,31 @@
                     <div class="owl-carousel players-carousel owl-theme mb-5">
                         <div class="item">
                             <div class="card border-0 bg-dark text-white">
-                                <img src="../content/images/players/player_01.jpg" alt="">
+                                <img src="../content/images/players/player_foda.jpg" alt="">
                                 <div class="card-body text-center">
-                                    <h5 class="font-24 border-bottom pb-2">Nome Jogador</h5>
+                                    <h5 class="font-24 border-bottom pb-2">Ednaldo Pereira</h5>
                                     <div class="row">
                                         <div class="col-md-6 d-flex align-items-center justify-content-center">
-                                            <small class="font-16">Função</small>
+                                            <small class="font-16">Cantor</small>
                                         </div>
                                         <div class="col-md-6 d-flex align-items-center justify-content-center">
-                                            <img src="../content/images/countries/Catar.png" alt="" style="width: 48px;">
+                                            <img src="../content/images/countries/Brasil.png" alt="" style="width: 48px;">
                                         </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card border-0 bg-dark text-white">
+                            <img src="../content/images/players/player_01.jpg" alt="">
+                            <div class="card-body text-center">
+                                <h5 class="font-24 border-bottom pb-2">Nome Jogador</h5>
+                                <div class="row">
+                                    <div class="col-md-6 d-flex align-items-center justify-content-center">
+                                        <small class="font-16">Função</small>
+                                    </div>
+                                    <div class="col-md-6 d-flex align-items-center justify-content-center">
+                                        <img src="../content/images/countries/Catar.png" alt="" style="width: 48px;">
                                     </div>
                                 </div>
                             </div>
@@ -432,7 +447,7 @@
                                         <small class="font-16">Função</small>
                                     </div>
                                     <div class="col-md-6 d-flex align-items-center justify-content-center">
-                                        <img src="../content/images/countries/Catar.png" alt="" style="width: 48px;">
+                                        <img src="../content/images/countries/Canadá.png" alt="" style="width: 48px;">
                                     </div>
                                 </div>
                             </div>
@@ -447,7 +462,7 @@
                                         <small class="font-16">Função</small>
                                     </div>
                                     <div class="col-md-6 d-flex align-items-center justify-content-center">
-                                        <img src="../content/images/countries/Catar.png" alt="" style="width: 48px;">
+                                        <img src="../content/images/countries/Suíça.png" alt="" style="width: 48px;">
                                     </div>
                                 </div>
                             </div>
@@ -462,7 +477,7 @@
                                         <small class="font-16">Função</small>
                                     </div>
                                     <div class="col-md-6 d-flex align-items-center justify-content-center">
-                                        <img src="../content/images/countries/Catar.png" alt="" style="width: 48px;">
+                                        <img src="../content/images/countries/Estados Unidos.png" alt="" style="width: 48px;">
                                     </div>
                                 </div>
                             </div>
