--- a/view/teste.html
+++ b/view/teste.html
@@ -40,6 +40,9 @@
                             <a class="nav-link text-white" href="#">Notícias</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-white" href="./resultado.html">Resultados</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-white" href="./teste.html">Teste</a>
                         </li>
                         <li class="nav-item dropdown">
@@ -49,7 +52,7 @@
                             <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item text-white" href="./fase-de-grupo.html">Fase de Grupo</a></li>
                             <li><a class="dropdown-item text-white" href="./fase-final.html">Fase Final</a></li>
-                            <li><a class="dropdown-item text-white" href="./fase-final.html">Ranking</a></li>
+                            <li><a class="dropdown-item text-white" href="./ranking.html">Ranking</a></li>
                             </ul>
                         </li>
                         </ul>
