--- a/view/index.html
+++ b/view/index.html
@@ -37,7 +37,10 @@
                             <a class="nav-link text-white" href="#">Calendario</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Notícias</a>
+                            <a class="nav-link text-white" href="../view/noticias.html">Notícias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="./resultado.html">Resultados</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="./teste.html">Teste</a>
@@ -49,7 +52,7 @@
                             <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item text-white" href="./fase-de-grupo.html">Fase de Grupo</a></li>
                             <li><a class="dropdown-item text-white" href="./fase-final.html">Fase Final</a></li>
-                            <li><a class="dropdown-item text-white" href="./fase-final.html">Ranking</a></li>
+                            <li><a class="dropdown-item text-white" href="./ranking.html">Ranking</a></li>
                             </ul>
                         </li>
                         </ul>
@@ -95,7 +98,7 @@
         </div>
     </section>
     <!-- Slider - End-->
-    <section class="body">
+    <main class="body">
 
         <!-- Próximos Jogos - Start-->
         <div class="container">
@@ -116,7 +119,8 @@
                           </strong>
                           
                           <p class="my-1 mt-2 font-16 text-primary"><strong>World Cup</strong></p>
-                          <p class="mb-2 font-12 text-primary"><strong>Grupo A</strong></p>
+                          <p class="mb-0 font-12 text-primary"><strong>Grupo A</strong></p>
+                          <p class="mb-2 font-12 text-primary">Rodada 1</p>
                         </div>
                       </div>
                       <div class="col-sm-4 d-flex justify-content-center text-center">
@@ -308,7 +312,7 @@
                 <div class="row py-3">
                     <div class="col-md-7">
                         <h3 class="fs-2 m-5 ms-3 text-primary">Ranking dos melhores times</h3>
-                        <p class="text-light ms-5 me-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eveniet, corporis reiciendis deserunt impedit earum a odio omnis autem error molestiae vero aspernatur quaerat? A sunt corporis mollitia fuga suscipit.</p>
+                        <p class="text-light ms-5 me-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae dolorem magni natus ad earum aspernatur cupiditate nobis ab, vero aliquid repudiandae at. Doloremque cupiditate id dolorum, quia quas explicabo! Consequatur, vero. Fugit officia iure, pariatur rem optio quidem delectus, voluptatem doloribus, ad fuga voluptas! Perspiciatis dolore beatae odit neque delectus.</p>
                         <a href="#" class="btn btn-dark ms-5 me-4 mt-4">Ver Tabela Completa</a>
                     </div>
                     <div class="col-md-5 my-5">
@@ -506,7 +510,7 @@
         </div>
         <!-- Partners - End -->
         
-    </section>
+    </main>
 
     <!-- Footer -->
     <div class="container-fluid bg-dark">
