--- a/view/fase-de-grupo.html
+++ b/view/fase-de-grupo.html
@@ -420,20 +420,20 @@
                                         </tr>
                                         <tr>
                                             <th scope="row" class=" text-center align-middle">
-                                                
+                                                <span class="mx-1">4</span>
                                             </th>
                                             <td class="text-center align-middle">
-                                                <img src="../content/images/countries/Null.png" alt="">
+                                                <img src="../content/images/countries/Austrália.png" alt="">
                                             </td>
-                                            <td class="align-middle ps-0"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
+                                            <td class="align-middle ps-0">Austrália</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -514,20 +514,20 @@
                                         </tr>
                                         <tr>
                                             <th scope="row" class=" text-center align-middle">
-                                                
+                                                <span class="mx-1">4</span>
                                             </th>
                                             <td class="text-center align-middle">
-                                                <img src="../content/images/countries/Null.png" alt="">
+                                                <img src="../content/images/countries/Costa Rica.png" alt="">
                                             </td>
-                                            <td class="align-middle ps-0"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
-                                            <td class="text-center align-middle"></td>
+                                            <td class="align-middle ps-0">Costa Rica</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
+                                            <td class="text-center align-middle">0</td>
                                         </tr>
                                     </tbody>
                                 </table>
