--- a/view/ranking.html
+++ b/view/ranking.html
@@ -600,34 +600,34 @@
                                         <span class="mx-1">31</span>
                                     </th>
                                     <td class="text-center align-middle">
-                                        <img src="../content/images/countries/Null.png" alt="">
+                                        <img src="../content/images/countries/Costa Rica.png" alt="">
                                     </td>
-                                    <td class="align-middle ps-0"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
+                                    <td class="align-middle ps-0">Costa Rica</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
                                 </tr>
                                 <tr>
                                    <th scope="row" class=" text-center align-middle border-start border-2">
                                         <span class="mx-1">32</span>
                                     </th>
                                     <td class="text-center align-middle">
-                                        <img src="../content/images/countries/Null.png" alt="">
+                                        <img src="../content/images/countries/Austrália.png" alt="">
                                     </td>
-                                    <td class="align-middle ps-0"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
-                                    <td class="text-center align-middle"></td>
+                                    <td class="align-middle ps-0">Austrália</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
+                                    <td class="text-center align-middle">0</td>
                                 </tr>
                             </tbody>
                         </table>
